Fix logo right part margin for better alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -690,7 +690,7 @@ span.logo-right-part {
     letter-spacing: 0.02em;
     text-align: center;
     color: var(--navy-blue);
-    margin: 32px auto 16px;
+    margin: 0px auto 16px;
 }
 
 .order-form-field:not(:last-child) {
